log
Fri, May  2, 2025 11:59:51 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  7:19:39 PM: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:32: error: 'Pair {aka struct Pair}' has no member named 'left'
             aux_pair = aux_pair->left;
                                ^~
treemap.c:80:32: error: 'Pair {aka struct Pair}' has no member named 'right'
             aux_pair = aux_pair->right;
                                ^~
252d50e
Sat, May  3, 2025  7:27:33 PM: 
 treemap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
0b8f0d8
Sat, May  3, 2025  8:26:32 PM: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:17: error: 'aux' undeclared (first use in this function)
             if (aux->left == NULL){
                 ^~~
treemap.c:65:17: note: each undeclared identifier is reported only once for each function it appears in
8548885
Sat, May  3, 2025  8:29:15 PM: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
03af2ec
Sat, May  3, 2025  8:30:54 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b4b70c3
Sat, May  3, 2025  8:32:42 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
0ea5647
Sat, May  3, 2025  8:59:09 PM: 
 treemap.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  15|4
total_score: 25/70
4d2f669
Sat, May  3, 2025  9:01:42 PM: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
4e133c9
Sat, May  3, 2025  9:05:04 PM: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
221744d
